[package]
name = "conntest"
version = "0.1.0"
authors = ["Steve <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
cpu-time = "1.0"
num_cpus = "1.0"
anyhow = "1.0.31"
threadpool = "1.8.1"

